L4Re: Checkin WIP for mips32r6 Release 6 ISA changes.
Use Codescape GNU Tools 2015.01-7, IMG GNU Linux Toolchain
mips-img-linux-gnu- for R6 ISA. Use MTI GNU Linux Toolchain
mips-mti-linux-gnu- for R1-R5 ISAs.

Not tested yet.

--- a/src/l4/mk/Kconfig
+++ b/src/l4/mk/Kconfig
@@ -239,6 +239,24 @@ endif
 
 if BUILD_ARCH_mips
 
+choice
+	prompt "CPU variant"
+
+config CPU_MIPS32_R2
+	bool "MIPS32 Release 2"
+	depends on BUILD_ARCH_mips
+
+config CPU_MIPS32_R6
+	bool "MIPS32 Release 6"
+	depends on BUILD_ARCH_mips
+
+endchoice
+
+config CPU
+	string
+	default "mips32r2"  if CPU_MIPS32_R2
+	default "mips32r6"  if CPU_MIPS32_R6
+
 config PAGE_SIZE_16KB
 	bool
 	default n
