L4Re: workaround for R6 arch mips:3000 toolchain issue.
The Codescape GNU Tools 2015.01-7, IMG GNU Linux Toolchain ignores the
-march=mips32r6 flag and sets arch mips:3000 when linking with an
arbitrary binary format file.  Work around the issue in
mips-img-linux-gnu-ld and objcopy by invoking gcc instead and first
passing a dummy .c file to gcc.

--- a/src/l4/pkg/libgfxbitmap/lib/src/Makefile
+++ b/src/l4/pkg/libgfxbitmap/lib/src/Makefile
@@ -11,7 +11,14 @@ include $(L4DIR)/mk/lib.mk
 
 %.o: %.psf
 	@$(COMP_MESSAGE)
+ifneq ($(ARCH),mips)
 	$(VERBOSE)$(LD) -r --oformat $(OFORMAT) -o $@ -b binary $^
+else
+#	Work around issue with ld and objcopy setting default arch to mips:3000
+	$(VERBOSE)$(TOUCH) fake.c
+	$(CC) $(CARCHFLAGS) -nostdlib -r -o $@ fake.c -Wl,--format=binary $^
+	$(VERBOSE)$(RM) fake.c
+endif
 
 %.psf: $(SRC_DIR)/%.psf
 	@ln -s $? $@
